--- a/scripts/install
+++ b/scripts/install
@@ -37,7 +37,7 @@ ynh_app_setting_set --app=$app --key=ynh_user_password --value=$ynh_user_passwor
 #=================================================
 ynh_script_progression --message="Configuring system user..."
 
-yunohost user create ${app}_notifs --firstname "Mobilizon" --lastname "Notifications" --domain "$domain" --password "$ynh_user_password" #-q 0
+yunohost user create ${app}_notifs --firstname "Mobilizon" --lastname "Notifications" --domain "$domain" --password "$ynh_user_password" -q 0
 yunohost user update ${app}_notifs --add-mailalias $app@$domain --add-mailforward $admin_email
 
 #=================================================
