--- a/scripts/install
+++ b/scripts/install
@@ -58,7 +58,7 @@ ynh_psql_execute_as_root --sql="ALTER USER $db_user PASSWORD '$db_pwd';" --datab
 ynh_script_progression --message="Setting up source files..."
 
 # Download, check integrity, uncompress and patch the source from app.src
-ynh_setup_source --dest_dir="$install_dir/live" --source_id=$architecture
+ynh_setup_source --dest_dir="$install_dir/live"
 
 chmod -R o-rwx "$install_dir"
 chown -R $app:www-data "$install_dir"
