--- a/scripts/install
+++ b/scripts/install
@@ -25,7 +25,7 @@ ynh_app_setting_set --app="$app" --key="ynh_user_password" --value="$ynh_user_pa
 #=================================================
 ynh_script_progression --message="Configuring yunohost users..."
 
-yunohost user create "$ynh_user" --firstname "Mobilizon" --lastname "Notifications" --domain "$domain" --password "$ynh_user_password" -q 0
+yunohost user create "$ynh_user" -F "Mobilizon Notifications" --domain "$domain" --password "$ynh_user_password" -q 0
 yunohost user update "$ynh_user" --add-mailalias "$app@$domain" --add-mailforward "$admin_email"
 
 #=================================================
