--- a/scripts/install
+++ b/scripts/install
@@ -44,7 +44,7 @@ ynh_psql_execute_as_root --database="$db_name" --sql="CREATE EXTENSION IF NOT EX
 ynh_script_progression --message="Setting up source files..."
 
 # Download, check integrity, uncompress and patch the source from app.src
-ynh_setup_source --dest_dir="$install_dir/live"
+ynh_setup_source --source_id=$YNH_DEBIAN --dest_dir="$install_dir/live"
 
 chmod -R o-rwx "$install_dir"
 chown -R "$app:www-data" "$install_dir"
