--- a/scripts/install
+++ b/scripts/install
@@ -13,7 +13,7 @@ source /usr/share/yunohost/helpers
 # INITIALIZE AND STORE SETTINGS
 #=================================================
 
-if [ "$debian" == "bookworm" && "$arch" != "x86_64" ]; then
+if [ "$debian" == "bookworm" ] && [ "$arch" != "x86_64" ]; then
   ynh_die --message="This version do not have an arm build for bookworm, but perhaps you can wait for future releases"
 fi
 
