--- a/scripts/install
+++ b/scripts/install
@@ -58,7 +58,7 @@ pushd "$install_dir/live"
     ynh_exec_as "$app" MOBILIZON_CONFIG_PATH="$MOBILIZON_CONFIG_PATH" MIX_ENV=prod \
         ./bin/mobilizon_ctl instance gen --force \
         --output "$MOBILIZON_CONFIG_PATH" \
-        --output-psql "$install_dir/setub_db.psql" \
+        --output-psql "$install_dir/setup_db.psql" \
         --domain "$domain" \
         --instance-name "Mobilizon" \
         --admin-email "$app@$domain" \
