--- a/scripts/install
+++ b/scripts/install
@@ -32,8 +32,6 @@ ynh_psql_db_shell <<< "ALTER USER $db_user WITH SUPERUSER;"
 ynh_psql_db_shell <<< "CREATE EXTENSION IF NOT EXISTS postgis;"
 ynh_psql_db_shell <<< "CREATE EXTENSION IF NOT EXISTS pg_trgm;"
 ynh_psql_db_shell <<< "CREATE EXTENSION IF NOT EXISTS unaccent;"
-ynh_psql_db_shell <<< "UPDATE admin_settings SET value = '["${language}"]' WHERE name ='instance_languages';"
-
 
 #=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
@@ -101,6 +99,9 @@ ynh_exec_as_app MOBILIZON_CONFIG_PATH="$install_dir/config.exs" "$install_dir/li
     users.new "$admin_email" --admin --password "$(ynh_string_random --length=30)"
 
 ynh_systemctl --service="$app" --action="stop" --log_path=systemd
+
+# Add the default language for the instance is broken via the admin settings app, here a workaround
+ynh_psql_db_shell $db_name <<< "UPDATE admin_settings SET value = '[""$language""]' WHERE name ='instance_languages';"
 
 #=================================================
 # START SYSTEMD SERVICE
