--- a/scripts/install
+++ b/scripts/install
@@ -20,7 +20,7 @@ ynh_app_setting_set --key=protect_against_basic_auth_spoofing --value="false"
 #=================================================
 ynh_script_progression "Configuring yunohost users..."
 
-yunohost user create "$ynh_user" -F "Mobilizon Notifications" --domain "$domain" --password "$ynh_user_password" -q 0
+yunohost user create "$ynh_user" --fullname "Mobilizon Notifications" --domain "$domain" --password "$ynh_user_password" -q 0
 yunohost user update "$ynh_user" --add-mailalias "$app@$domain" --add-mailforward "$admin_email"
 
 #=================================================
